# testPImpl

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
module/: CMakeLists.txt
module/include/: TheClass.h  TheInherited.h
module/src/: TheClass.cpp  TheInherited.cpp  ThePrivateImplOfTheClass.cpp  ThePrivateImplOfTheClass.h
module/tests/: CMakeLists.txt  TInherited_tests.cpp  TheClassPrivateImpl_tests.cpp  TheClass_tests.cpp
src/: CMakeLists.txt  main.cpp
